--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,10 @@
 spring.application.name=APIx
 
-spring.datasource.url=jdbc:mysql://43.154.22.219:3308/attendance-system-management-debug?useSSL=false
-#database username
-spring.datasource.username=pordar
-#database password
-spring.datasource.password=654321
+spring.datasource.url=jdbc:mysql://localhost:3306/attn_dev
+spring.datasource.username=root
+spring.datasource.password=
 
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-
-server.port=8181
